objects/vlocity_cmt__FulfilmentRequest__c.object
<CustomObject>
    <description>Representation for backend orders (CFS Orders, Logistics Orders, Billing Update Requests, etc)</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AccountId</description>
        <inlineHelpText>AccountId</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>FulfilmentRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentRequestNumber2__c</fullName>
        <description>A FR number that matches the FR name.</description>
        <formula>LPAD(TEXT(VALUE(SUBSTITUTE(Name, &apos;FR&apos;, &apos;&apos;))), 8, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfilment Request Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentRequestNumber__c</fullName>
        <description>Fulfilment Request Number</description>
        <displayFormat>{00000000}</displayFormat>
        <inlineHelpText>Fulfilment Request Number (Deprecated)</inlineHelpText>
        <label>Fulfilment Request Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__orchestrationPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Plan</label>
        <referenceTo>vlocity_cmt__OrchestrationPlan__c</referenceTo>
        <relationshipLabel>Fulfilment Requests</relationshipLabel>
        <relationshipName>FulfilmentRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fulfilment Request</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FR{0000000}</displayFormat>
        <label>Fulfilment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfilment Requests</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__FulfilmentRequest</fullName>
        <active>true</active>
        <label>Fulfilment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ServiceQualificationRequest</fullName>
        <active>true</active>
        <label>Service Qualification Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>